# Media-Trimmer

./: .gitignore  README.md  pyproject.toml
src/media_trimmer/: main.py  player_widget.py  trimmer.py  ui_mainwindow.py
tests/: README.md  pyproject.toml
