
[tool.poetry]
name = "media_trimmer"
version = "0.1.0"
description = "A PyQt5 + VLC Media Trimmer Tool"
authors = ["Your Name <you@example.com>"]
packages = [{ include = "media_trimmer", from = "src" }]

[tool.poetry.dependencies]
python = "^3.9"
PyQt5 = "^5.15.10"
python-vlc = "^3.0.12118"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
